# musicapi

./: Cargo.toml  LICENSE  README.md
src/: api.rs  app.rs  main.rs  player.rs  ui.rs
