[package]
name = "musicapi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dirs = "6.0.0"
ncurses = { version = "6.0.1", optional = true }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rodio = { version = "0.22.2", features = ["playback"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"

[features]
default = []
ncurses-ui = ["dep:ncurses"]
